--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -3,6 +3,7 @@ site_name: orvice's wiki
 
 pages:
     - Home: index.md
+    - Linux: linux.md
     - Debian: debian.md
     - Docker: docker.md
     - Git: git.md
